--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./res/css/time.css">
+    <link rel="stylesheet" href="./res/css/index.css">
     <title>Document</title>
 </head>
 <body>
@@ -18,6 +18,6 @@
             </div>
         </div>
     </div>
-    <script src="./res/js/times.js"></script>
+    <script src="./res/js/main.js"></script>
 </body>
 </html>
