--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./res/css/index.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="./res/img/time.png" type="image/x-icon">
+    <title>Hodiny</title>
 </head>
 <body>
     <div class="hero">
